# hackathon-2

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/console-todo/: 1-complete-implementation-todo-app.green.prompt.md  1-create-plan-todo-app.plan.prompt.md  1-create-tasks-todo-app.tasks.prompt.md
history/prompts/constitution/: 1-create-constitution-todo-app.constitution.prompt.md
history/prompts/general/: 1-create-spec-todo-app.spec.prompt.md
specs/1-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-console-todo/checklists/: requirements.md
specs/1-console-todo/contracts/: todo-service-contract.md
src/cli/: main.py
src/models/: todo.py
src/repositories/: todo_repository.py
src/utils/: validators.py
