[project]
name = "todo-app"
version = "0.1.0"
description = "In-Memory Python Console Todo Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo-app = "src.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3